--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^0.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
