--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "dhtmlx-scheduler": "^6.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "lodash": "^4.17.21",
