migrated to next js app router from pages router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,20 @@
       "jsx": "preserve",
       "incremental": true,
       "paths": {
-         "@/*": ["./*"]
-      }
+         "@/*": ["./src/*"]
+      },
+      "plugins": [
+         {
+            "name": "next"
+         }
+      ]
    },
-   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "declarations.d.ts"],
+   "include": [
+      "next-env.d.ts",
+      "**/*.ts",
+      "**/*.tsx",
+      "declarations.d.ts",
+      ".next/types/**/*.ts"
+   ],
    "exclude": ["node_modules"]
 }
