--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
       "@types/react-dom": "18.0.11",
       "dhtmlx-scheduler": "^6.0.3",
       "eslint": "8.38.0",
-      "eslint-config-next": "13.3.0",
       "lodash": "^4.17.21",
-      "next": "^13.4.13",
+      "next": "^13.5.4",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "sonner": "^0.4.0",
       "typescript": "5.0.4"
    },
    "devDependencies": {
-      "@types/lodash": "^4.14.194"
+      "@types/lodash": "^4.14.194",
+      "eslint-config-next": "^13.5.4"
    }
 }
