--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "next": "^13.5.4",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
-      "sonner": "^0.4.0",
+      "sonner": "1.0.0",
       "typescript": "5.0.4"
    },
    "devDependencies": {
