--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
       "@fluentui/react-icons": "^2.0.200",
       "@mui/material": "^5.9.1",
       "@plasmicapp/loader-nextjs": "^1.0.305",
-      "@plasmicapp/react-web": "^0.2.244",
       "@types/node": "18.15.12",
       "@types/react": "18.0.37",
       "@types/react-dom": "18.0.11",
       "dhtmlx-scheduler": "^6.0.3",
       "eslint": "8.38.0",
       "lodash": "^4.17.21",
+      "mini-css-extract-plugin": "^2.7.6",
       "next": "^13.5.4",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
