--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,6 @@
          }
       ]
    },
-   "include": [
-      "next-env.d.ts",
-      "**/*.ts",
-      "**/*.tsx",
-      "declarations.d.ts",
-      ".next/types/**/*.ts"
-   ],
+   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "declarations.d.ts", ".next/types/**/*.ts"],
    "exclude": ["node_modules"]
 }
