--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
    "semi": true,
-   "singleQuote": true,
+   "singleQuote": false,
    "jsxSingleQuote": false,
    "bracketSpacing": true,
    "trailingComma": "es5",
